--- a/app/src/main/res/layout/slideshow_item.xml
+++ b/app/src/main/res/layout/slideshow_item.xml
@@ -6,8 +6,21 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/slide_image_view"
         android:src="@color/colorAccent"
-        android:layout_margin="8dp"/>
+        android:layout_margin="8dp"
+        android:layout_weight="0.7"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.3"
+        android:id="@+id/image_description"
+        android:text="Short image description"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:textSize="18sp"
+        />
+
 </LinearLayout>
