--- a/app/src/main/res/layout/incident_item.xml
+++ b/app/src/main/res/layout/incident_item.xml
@@ -3,8 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
+    android:background="@color/colorGrey"
     android:orientation="vertical"
-    android:background="@color/colorPrimary">
+    android:padding="8dp">
 
     <ImageView
         android:id="@+id/incident_icon"
