rest of files for last commit

--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -9,6 +9,8 @@
     tools:context="kolodziejczyk.olek.inzynierka.kwod_proj.MenuActivity"
     tools:showIn="@layout/activity_menu">
 
+    <include layout="@layout/views_container"/>
+
     <TextView
         android:id="@+id/app_name"
         android:layout_width="wrap_content"
