--- a/app/src/main/res/layout/slideshow_activity.xml
+++ b/app/src/main/res/layout/slideshow_activity.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
@@ -17,5 +18,8 @@
         app:tabBackground="@drawable/tab_selector"
         app:tabGravity="center"
         app:tabIndicatorHeight="0dp" />
+
+    <include layout="@layout/views_container"/>
+
 
 </RelativeLayout>
