--- a/app/src/main/res/layout/slideshow_item.xml
+++ b/app/src/main/res/layout/slideshow_item.xml
@@ -2,24 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="2">
 
     <ImageView
         android:id="@+id/slide_image_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
         android:layout_margin="8dp"
-        android:layout_weight="0.7"
+        android:layout_weight="1"
         android:src="@color/colorAccent" />
 
     <TextView
         android:id="@+id/image_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_weight="0.3"
+        android:layout_weight="1"
         android:text="Short image description"
         android:textSize="18sp" />
 
