--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -11,6 +11,7 @@
 
     <TextView
         android:id="@+id/app_name"
+        android:layout_marginTop="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -25,13 +26,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/app_name"
+        android:layout_above="@+id/incident_list_button"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        android:gravity="center_horizontal"
+        android:layout_marginBottom="8dp"
+        android:gravity="center_vertical|center_horizontal"
         android:text="Short description"
         android:textColor="@color/colorBlack"
+        android:textAlignment="center"
         android:textSize="20sp" />
 
     <Button
