--- a/app/src/main/res/layout/fab_view.xml
+++ b/app/src/main/res/layout/fab_view.xml
@@ -66,7 +66,8 @@
         android:layout_marginBottom="94dp"
         android:layout_marginEnd="76dp"
         android:clickable="false"
-        android:text="997"
+        android:text="Policja"
+        android:textColor="@color/colorWhite"
         android:textSize="20sp"
         android:visibility="invisible" />
 
@@ -78,7 +79,8 @@
         android:layout_marginBottom="148dp"
         android:layout_marginEnd="76dp"
         android:clickable="false"
-        android:text="998"
+        android:text="Straż pożarna"
+        android:textColor="@color/colorWhite"
         android:textSize="20sp"
         android:visibility="invisible" />
 
@@ -90,7 +92,8 @@
         android:layout_marginBottom="202dp"
         android:layout_marginEnd="76dp"
         android:clickable="false"
-        android:text="999"
+        android:text="Pogotowie"
+        android:textColor="@color/colorWhite"
         android:textSize="20sp"
         android:visibility="invisible" />
 
